# latero-graphics-studio

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README
content/ASSETS10/abstract1/: detailed.ai  detailed.gen  mix1.gen  mix2.gen  sparse-tx.gen  sparse.ai  sparse.gen
content/ASSETS10/floor1/: details.gen  floor-A.gen  floor-B.gen  simple1.gen  simple2.gen
content/ASSETS10/seats/: dense.ai  sparse.ai
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  managerwidget.cpp  managerwidget.h
